2016-12-03完善tomcat和redis相关内容